# connect4_minmax_rust

./: Cargo.toml  README.md
.github/workflows/: tests.yml
src/: ai.rs  board.rs  board_iterators.rs  evaluator.rs  game.rs  lib.rs  main.rs  validator.rs
