[package]
name = "connect4"
version = "0.1.0"
authors = ["Valdemar Ceccon <valdemar.ceccon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"

[target.x86_64-unknown-linux-gnu]
linker = "/usr/bin/cc"
